k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metedata: 
  name: redis-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metedata:
      lables:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
