k8s/server-deployment..yml
apiVersion: apps/v1
kind: Deployment
metedata:
  name: server-deployment
spec:
  replicas: 3
  selectors:
    matchLabels: 
      component: server
    template:
      metedata:
        lables:
          component: server
      spec:
        containers: 
          - name: server
            image: Shareef1999/multi-server
            ports:
              - containerPort: 5000
