k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metedata: 
  name: worker-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: worker
  template:
    metedata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: Shareef1999/multi-worker
